<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <com.google.android.gms.samples.vision.face.facetracker.ui.camera.CameraSourcePreview
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/trans"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/no_faces_found"
            android:textStyle="bold"
            android:visibility="invisible" />

        <com.google.android.gms.samples.vision.face.facetracker.ui.camera.GraphicOverlay
            android:id="@+id/faceOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.gms.samples.vision.face.facetracker.ui.camera.CameraSourcePreview>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/faces"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#303030"
                android:text="@string/number_of_faces" />

            <Button
                android:id="@+id/distance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#303030"
                android:text="@string/distance" />

            <Button
                android:id="@+id/display"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/faces"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:background="#303030"
                android:text="@string/display_info" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#424242"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/info2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="#424242"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/no_faces_found" />

            <TextView
                android:id="@+id/info3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:background="#424242"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/no_faces_found" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>